force-app/main/default/objects/Operator_Contractor__c.object
<CustomObject>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Field for use in the flow case audit set SLA.</description>
        <formula>Operator__r.Name</formula>
        <label>Client (Operator) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Status__c</fullName>
        <label>Supplier Account Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operator Contractor</relationshipLabel>
        <relationshipName>Contractor_Operators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>ABS(CreatedDate  - NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>tracking first payment</description>
        <label>Initial Payment Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Client_Account__c</fullName>
        <description>Boolean field created to identify internal Avetta accounts that have connections with supplier accounts. Field will be used in automation to disqualify records.</description>
        <formula>CONTAINS(Client_Name__c, &apos;Avetta&apos;)
 || 
	CONTAINS(Client_Name__c, &apos;PQF&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Client Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether the connection is active and current</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cargill_Client__c</fullName>
        <description>Used for Cargill Roll Up Summary field on the account.</description>
        <formula>CONTAINS(Client_Name__c, &apos;Cargill&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cargill Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Operator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Operator Contractor 1</relationshipLabel>
        <relationshipName>Operator_Contractors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organizer_Key__c</fullName>
        <description>Created from concatenating PICS ID &amp; REPORTING SITE PICS ID. Used to upsert records.</description>
        <externalId>true</externalId>
        <label>Organizer Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of Operator Contractor Connection</description>
        <label>Connection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Operator Contractor</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Operator Contractor Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operator  Contractor Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>